metadata1/unpackaged/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>AE_1_Bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE 1 Bonus</label>
        <referenceTo>AE_Bonus__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_2_Bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE 2 Bonus</label>
        <referenceTo>AE_Bonus__c</referenceTo>
        <relationshipLabel>Invoices (AE 2 Bonus)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATI_Email__c</fullName>
        <description>When an invoice is finalized and the job has a national account listed, this will copy the email from the account.</description>
        <label>ATI Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ATI_Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ATI Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_CC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC to</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (CC to)</relationshipLabel>
        <relationshipName>InvoicesCC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_of_Job_Completion_to_Invoice__c</fullName>
        <formula>Due_Date__c - Job_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Job Completion to Invoice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <description>Field populated by Invoice Approval Process field update to indicate the user that approved the record</description>
        <label>Approved By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigTimeSID__c</fullName>
        <externalId>true</externalId>
        <label>BigTimeSID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address1__c</fullName>
        <label>Bill To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <referenceTo>Billing_Address__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Formula__c</fullName>
        <description>Formula field to populate Bill To Address onto the Invoice from Billing Address object.</description>
        <formula>Bill_To_Address3__r.Billing_Street__c &amp; IF(ISBLANK( Bill_To_Address3__r.Billing_City__c ), &apos;&apos;, BR()) &amp;  
Bill_To_Address3__r.Billing_City__c &amp; IF(ISBLANK( Bill_To_Address3__r.Billing_City__c ), &apos;&apos;, &apos;, &apos;)  &amp;  Bill_To_Address3__r.Billing_State__c &amp; &apos; &apos; &amp;  Bill_To_Address3__r.Billing_Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <formula>Bill_To__r.BillingStreet &amp;  BR() &amp;  Bill_To__r.BillingCity  &amp; &apos;, &apos; &amp;  Bill_To__r.BillingState &amp; &apos; &apos; &amp;  Bill_To__r.BillingPostalCode</formula>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Attention_Line_2__c</fullName>
        <description>Bill To Attention Line 2-- to allow for wrapping of text on PDF document for long Bill to Attention</description>
        <label>Bill To Attention Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Attention_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to indicate the Bill to Attention on the Invoice record.  This field is mapped to the Waiver/Letter VF page and Waiver/Letter Conga templates.</description>
        <label>Bill To Attention Lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Bill To Attention Lookup)</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Attention__c</fullName>
        <label>Bill To Attention Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <description>When an invoice is finalized and the job has a national account listed, this will copy the email from the account.</description>
        <label>Bill To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_for_Conga_Template__c</fullName>
        <formula>IF(OR(Bill_To__r.IsPersonAccount=TRUE, Omit_Bill_To__c=TRUE),&quot;&quot;, Bill_To__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To for Conga Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <formula>Bill_To__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <formula>Bill_To__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Billing Tax Group</inlineHelpText>
        <label>Bill to Tax Group</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to_Zip__c</fullName>
        <formula>Bill_To__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Requirement__c</fullName>
        <description>Billing note from Account will populate upon saved.</description>
        <label>Billing Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (CC)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Address_Care_of_Formula__c</fullName>
        <description>Formula field on Invoice to display CC Address (Care of) from Billing Address object</description>
        <formula>CC_Address_Care_of_lookup__r.Billing_Street__c  &amp;  BR()&amp;
CC_Address_Care_of_lookup__r.Billing_City__c &amp; 
IF(ISBLANK(CC_Address_Care_of_lookup__r.Billing_Street__c), &apos; &apos;, &apos;, &apos;) &amp; 
CC_Address_Care_of_lookup__r.Billing_State__c &amp;&quot; &quot;&amp;  
CC_Address_Care_of_lookup__r.Billing_Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Address (Care of)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Address_Care_of_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Billing Address object for CC Address (Care of)</description>
        <label>CC Address (Care of)</label>
        <referenceTo>Billing_Address__c</referenceTo>
        <relationshipLabel>Invoices (CC Address (Care of))</relationshipLabel>
        <relationshipName>Invoices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Address_Formula__c</fullName>
        <description>Formula field for CC Address from Billing Address object to display on Invoice</description>
        <formula>CC_Address_Lookup__r.Billing_Street__c &amp; BR() &amp;  
CC_Address_Lookup__r.Billing_City__c  &amp; 
IF(ISBLANK( CC_Address_Lookup__r.Billing_City__c ), &apos; &apos;, &apos;, &apos;) &amp; 
CC_Address_Lookup__r.Billing_State__c  &amp;&quot; &quot;&amp;  
CC_Address_Lookup__r.Billing_Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Address_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Billing Address object for CC Address</description>
        <label>CC Address</label>
        <referenceTo>Billing_Address__c</referenceTo>
        <relationshipLabel>Invoices (CC Address)</relationshipLabel>
        <relationshipName>Invoices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <formula>CC_Account__r.BillingStreet &amp; BR() &amp; CC_Account__r.BillingCity &amp;  IF(OR(ISBLANK(CC_Account__r.BillingCity), ISBLANK(CC_Account__r.BillingState)), &apos; &apos;, &apos;, &apos;)  &amp; CC_Account__r.BillingState &amp;&quot; &quot;&amp; CC_Account__r.BillingPostalCode</formula>
        <label>CC Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Address_careOf__c</fullName>
        <formula>CC_CareOf__r.BillingStreet &amp; IF(OR(ISBLANK(CC_CareOf__r.BillingStreet), ISBLANK(CC_CareOf__r.BillingCity)), &apos; &apos;, &apos;, &apos;) &amp; CC_CareOf__r.BillingCity &amp;  IF(OR(ISBLANK(CC_CareOf__r.BillingCity), ISBLANK(CC_CareOf__r.BillingState)), &apos; &apos;, &apos;, &apos;)  &amp; CC_CareOf__r.BillingState &amp;&quot; &quot;&amp; CC_CareOf__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Attention_CareOf__c</fullName>
        <label>CC Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Attention_Email__c</fullName>
        <label>CC Attention Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC_Attention__c</fullName>
        <label>CC Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_CareOf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (CC)</relationshipLabel>
        <relationshipName>Invoices4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_City_State_Zip__c</fullName>
        <formula>CC_Address_Lookup__r.Billing_City__c  &amp; IF( CC_Address_Lookup__r.Billing_City__c =&quot;&quot;,&quot;&quot;,&quot;, &quot;)&amp;  CC_Address_Lookup__r.Billing_State__c  &amp; &quot; &quot; &amp;  CC_Address_Lookup__r.Billing_Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC City, State, Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_City__c</fullName>
        <formula>CC_Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Company__c</fullName>
        <formula>CC_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Email__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC_State__c</fullName>
        <formula>CC_Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Street_Address__c</fullName>
        <formula>CC_Address_Lookup__r.Billing_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Zip__c</fullName>
        <formula>CC_Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_Of_Address__c</fullName>
        <formula>Care_Of__r.BillingStreet &amp; BR() &amp; Care_Of__r.BillingCity &amp; &apos;, &apos; &amp; Care_Of__r.BillingState &amp; &apos; &apos; &amp; Care_Of__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care Of Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Of_Attention__c</fullName>
        <label>Care Of Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Of_Email__c</fullName>
        <label>Care Of Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Care_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Of</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Care Of)</relationshipLabel>
        <relationshipName>Invoices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_of_Address1__c</fullName>
        <label>Care of Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_of_Address_Formula__c</fullName>
        <description>Formula field to populate Care of Address onto the Invoice from Billing Address object.</description>
        <formula>Care_of_Address_lookup__r.Billing_Street__c  &amp; BR() &amp;  
Care_of_Address_lookup__r.Billing_City__c  &amp;
IF(ISBLANK( Care_of_Address_lookup__r.Billing_City__c ), &apos; &apos;, &apos;, &apos;) &amp;  
Care_of_Address_lookup__r.Billing_State__c  &amp; &apos; &apos; &amp;  
Care_of_Address_lookup__r.Billing_Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care of Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_of_Address_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Billing Address object for the Care of Address</description>
        <label>Care of Address</label>
        <referenceTo>Billing_Address__c</referenceTo>
        <relationshipLabel>Invoices (Care of Address)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditional_Waiver_created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox flagged by Process Builder flow when a conditional waiver has been created for this Invoice-- to be used in &apos;Invoices Requiring Waiver&apos; list view</description>
        <label>Conditional Waiver created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_PDF_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Current PDF Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerTaxGroup__c</fullName>
        <formula>Bill_To__r.Tax_Group__c</formula>
        <label>CustomerTaxGroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_satisfaction_obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer satisfaction obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_satisfaction_sent_delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer satisfaction sent/delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date_New__c</fullName>
        <formula>Due_Date__c + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Federal_ID__c</fullName>
        <defaultValue>&apos;33-0352215&apos;</defaultValue>
        <label>Federal ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalized_By_Name__c</fullName>
        <label>Finalized By Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalized_By__c</fullName>
        <inlineHelpText>Name of the User who checked Final</inlineHelpText>
        <label>Finalized By</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalized_By_is_current_user__c</fullName>
        <formula>IF(  Finalized_By__c  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized By is current user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this invoice will be synchronized with Timberline but not sent to customer.</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Approved_Date_Time__c</fullName>
        <description>Field to stamp the date/time that an invoice is approved</description>
        <label>Invoice Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_City_State_Zip__c</fullName>
        <formula>IF(ISBLANK(Care_of_Address_lookup__c),  Bill_To_Address3__r.Billing_City__c &amp; &quot;, &quot; &amp;  Bill_To_Address3__r.Billing_State__c &amp; &quot; &quot; &amp;  Bill_To_Address3__r.Billing_Zipcode__c,  Care_of_Address_lookup__r.Billing_City__c &amp; &quot;, &quot; &amp;  Care_of_Address_lookup__r.Billing_State__c &amp; &quot; &quot; &amp;  Care_of_Address_lookup__r.Billing_Zipcode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice City, State, Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_Incremental__c</fullName>
        <label>Invoice Number Incremental</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_PD_on_job_is_current_user__c</fullName>
        <formula>IF((Project_Manager__c  = $User.FirstName+ &apos; &apos; + $User.LastName),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice PD on job is current user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Street_Address__c</fullName>
        <formula>IF(ISBLANK( Care_of_Address_lookup__c), Bill_To_Address3__r.Billing_Street__c , Care_of_Address_lookup__r.Billing_Street__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Submitted_Date_Time__c</fullName>
        <label>Invoice Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_creator_is_current_user__c</fullName>
        <formula>IF((CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName = $User.FirstName+ &apos; &apos; + $User.LastName),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice creator is current user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Dummy_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this invoice will not be synchronized with Timberline (dummy invoice).</inlineHelpText>
        <label>Pro forma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, the &quot;draft&quot; watermark is removed, and the invoice can no longer be modified. Invoice must be marked &quot;Final&quot; before it can be synchronized with Timberline.</inlineHelpText>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Forecast_Quick_Update_Eligible__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(ATI_Job__r.Last_Successful_Timberline_Update__c), 
((ATI_Job__r.Last_Successful_Timberline_Update__c+0.002) &lt; LastModifiedDate), 
((ATI_Job__r.Last_Successful_Timberline_Update__c+0.002) &lt; ATI_Job__r.LastModifiedDate) ), 
&quot;true&quot;, 
&quot;false&quot; )</formula>
        <label>Is Forecast Quick Update Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Completion_Date__c</fullName>
        <formula>ATI_Job__r.Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <formula>ATI_Job__r.Job_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Timberline_Sync__c</fullName>
        <label>Last Successful Timberline Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MTD_Work_Billed__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Work Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MapAccountBackBillToCC__c</fullName>
        <description>Deployment, map Bill to CC account to invoice, no master</description>
        <formula>CC_Account__r.Account_Name_and_Address__c</formula>
        <label>MapAccountBackBillToCC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapAccountBackCareOfCC__c</fullName>
        <description>deployment, map back Care Of CC account to invoice, no master</description>
        <formula>CC_CareOf__r.Account_Name_and_Address__c</formula>
        <label>MapAccountBackCareOfCC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapAccountBackCareOf__c</fullName>
        <description>deployment, map care of account back to invoice, no master account.</description>
        <formula>Care_Of__r.Account_Name_and_Address__c</formula>
        <label>MapAccountBackCareOf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapAccountBack__c</fullName>
        <description>This is for deployment so we can map the account back to invoice when there is no master account.</description>
        <formula>Bill_To__r.Name +  Bill_To__r.Account_Address__c</formula>
        <label>MapAccountBack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapMasterAccountBackBillToCC__c</fullName>
        <description>deployment, bill to cc account map back to invoice, master account.</description>
        <formula>CC_Account__r.Master_Account__c +  CC_Account__r.Account_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapMasterAccountBackBillToCC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapMasterAccountBackCareOfCC__c</fullName>
        <description>deployment, map Care Of CC account back to invoice, master.</description>
        <formula>CC_CareOf__r.Master_Account__c +  CC_CareOf__r.Account_Address__c</formula>
        <label>MapMasterAccountBackCareOfCC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapMasterAccountBackCareOf__c</fullName>
        <description>deployment, map Care Of account back to invoice, master.</description>
        <formula>Care_Of__r.Master_Account__c +  Care_Of__r.Account_Address__c</formula>
        <label>MapMasterAccountBackCareOf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapMasterAccountBack__c</fullName>
        <description>This is for deployment to map account back to invoice when there is a master account.</description>
        <formula>Bill_To__r.Master_Account__c +  Bill_To__r.Account_Address__c</formula>
        <label>MapMasterAccountBack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_Due__c</fullName>
        <formula>((Total_Costs_Per_Contract__c  +  Total_Tax__c) - retainage_amount__c)- Total_Credits__c -  Payment_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Costs on Contract + Tax less Retainage - Amounts Received - Payments/ Adjustments</inlineHelpText>
        <label>Net Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Version__c</fullName>
        <formula>Version__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Version #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <formula>ATI_Job__r.Office2__r.Name</formula>
        <label>Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omit_Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that the user does not want the Bill To Account Name to show up on the Invoice PDF</description>
        <label>Overwrite Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Opportunity object</description>
        <label>Job</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDF_Bill_To_Attention__c</fullName>
        <formula>IF(ISBLANK(Bill_To_Attention__c),
Bill_To_Attention_Lookup__r.FirstName &amp; &quot; &quot; &amp;  Bill_To_Attention_Lookup__r.LastName ,
Bill_To_Attention__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Bill To Attention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Adjustment__c</fullName>
        <label>Payment / Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payments_Credits__c</fullName>
        <formula>Total_Credits__c +  Payment_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments + Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>ATI_Job__r.Project_Manager_FirstName__c + &quot; &quot; + ATI_Job__r.Project_Manager_LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_obsolete__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager (Obsolete)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Site_City_State__c</fullName>
        <formula>ATI_Job__r.Project_Site_City__c &amp; &quot;, &quot; &amp; ATI_Job__r.Project_Site_State__c &amp; &quot; &quot; &amp; ATI_Job__r.Project_Site_Zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site City/State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Street_Address__c</fullName>
        <formula>ATI_Job__r.Project_Site_Address__c &amp; &quot; &quot; &amp; ATI_Job__r.Project_Site_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number_New__c</fullName>
        <description>This will be on the edit page and re-writable field for accounting to list the reference number.</description>
        <inlineHelpText>List the reference number if it is separate from the job.</inlineHelpText>
        <label>Reference Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Reference_Number_New__c)), 
Reference_Number_New__c, 
IF( 
NOT(ISBLANK(ATI_Job__r.Claim__c)), 
ATI_Job__r.Claim__c, 
IF( 
NOT(ISBLANK(ATI_Job__r.Policy__c)), 
ATI_Job__r.Policy__c, 
IF( 
NOT(ISBLANK(ATI_Job__r.Cont_P_O_Client_Job__c)), 
ATI_Job__r.Cont_P_O_Client_Job__c, 
&quot;&quot; ))))</formula>
        <label>Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to indicate a waiver should be created by the collector.</description>
        <label>Requires Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retainage_Held__c</fullName>
        <label>Retainage Held ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainage_Held_percent__c</fullName>
        <label>Retainage Held</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scope_sent_approved_by_adjuster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope sent/approved by adjuster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_To_Timberline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Timberline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_authorization_with_invoice__c</fullName>
        <description>PD needs to indicate whether to send out scope with the invoice. Missing value will indicates to review the information.</description>
        <label>Send authorization with invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_invoice_to_customer_insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send invoice to customer/insurance</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>